added my github name

--- a/presentation.tex
+++ b/presentation.tex
@@ -37,7 +37,7 @@
 %=================================================
 
 \title[ \hspace{0.8cm} \insertframenumber/\inserttotalframenumber]{{\sc Gamma Matrices and Clifford algebra }}
-\author{{Asma \\ Ismail Ezzaki}}
+\author{{Asma BOUTAGAYOUT \\ Ismail Ezzaki}}
 \date  {\today}
 \institute{Université Cadi Ayyad \\Faculté des Sciences Semlalia \\ Département de Physique}
 
