--- a/examples/Cl-structure.tex
+++ b/examples/Cl-structure.tex
@@ -2,13 +2,31 @@
 % --------------------------------------------------- Slide --
 %\subsection{Hyperlinks Code}
 \label{hyperlinks}
-\begin{frame}\frametitle{Hyperlink}
-Before we can create any hyperlinks we need to tag the frames we want to link to using the \label command.
- 
-\hyperlink{contents}{click here}
-\hyperlink{section1}{\beamerbutton{section 1 page}}
-\hyperlink{columns}{\beamergotobutton{columns page}}
-\hyperlink{pictures}{\beamerskipbutton{pictures page}}
-\hyperlink{pictures}{\beamerreturnbutton{pictures page}}
+\begin{frame}\frametitle{Exemple of Clifford Algebras}
+
+
+\begin{center}
+
+\end{center}
+
+
+\begin{table}[htp]
+ \centering
+\begin{tabular}{ccc}\hline
+
+\textbf{Notation} & \textbf{Geometry} & \textbf{Dim.}\\\hline
+$Cl_{2,0}$ & plane & 4\\\hline
+$Cl_{0,1}$ & complex & 2\\\hline
+$Cl_{0,2}$ & quaternios & 4\\\hline
+$Cl_{0,3}$ & Pauli & 8\\\hline
+$Cl_{1,3}$ & Dirac & 16\\\hline
+$Cl_{m,n}$ & sigature $(m,n)$ & $2^{n+m}$\\\hline
+\end{tabular}
+
+ \caption{Exemple of Clifford Algebras}
+\end{table}
+
+
+
 
 \end{frame}
