--- a/examples/Demonstration.tex
+++ b/examples/Demonstration.tex
@@ -2,11 +2,18 @@
 % --------------------------------------------------- Slide --
 %\subsection{Columns}
 \label{columns}
-\begin{frame}\frametitle{Columns}
-  \begin{columns}
-    \column{0.5\textwidth}
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    \column{0.5\textwidth}
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  \end{columns}
+\begin{frame}\frametitle{Demonstration of Clifford’s rule}
+
+% 
+%  \textbf{Gressman} : “a product of two extensives quantities u and v is defined as extensive quantity or a scalar.”
+%  
+% clifford consider a n-fundamental units (e1,e2,...,en) 
+% 
+% such that n is an integer ,  all$ (ej)^2= +e or -e $ and $ej.ek=-ek.ej$ $(j#k)=$\\
+% where e denotes the identity. all product of linear factors must contain either basic terms of odd order (ej, ejekel, ... such that j#k#l), or basic terms of even order ( 1, ej ek, ...such that j# k). There can be no such term of higher order than the n. and since we have altogether one term of order zero, n of order 1, (½ (n - 1); n odd,n/2; even) of order 2,... , one of order n; the total number of basic terms is 2^n units.
+% 
+% He uses the selective symbols Vo, VI, ..., Vn to denote the subspaces     containing expressions of order 0, 1, ..., n.
+% 
+%  
+
 \end{frame}
