--- a/examples/Gamma-5.tex
+++ b/examples/Gamma-5.tex
@@ -1,11 +1,40 @@
 %\section{Description}
 % --------------------------------------------------- Slide --
 %\subsection{Description}
-\label{description}
-\begin{frame}\frametitle{Description Environment}
-  \begin{description}
-    \item[API] Application Programming Interface
-    \item[LAN] Local Area Network
-    \item[ASCII] American Standard Code for Information Interchange
-  \end{description}
+\label{The fifth Gamma matrix}
+\begin{frame}\frametitle{The fifth Gamma matrix}
+
+Define an additional γ-matrix by:\\
+
+$\gamma^5\equiv i/4! \varepsilon_{\nu \rho \sigma  \eta}  \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\eta$\\
+$\gamma^5\equiv i\gamma^0\gamma^1\gamma^2\gamma^3$\\
+
+Note:
+$(\gamma^5)^2 = 1$
+anti-commutes with every other $\gamma$:
+$\{\gamma^5,\gamma^\mu\}=0 \Longrightarrow \gamma^5\times \gamma^\mu = - \gamma^\mu \times \gamma^5 $
+
+
+\end{frame}
+
+
+
+\label{The fifth Gamma matrix}
+
+\begin{frame}\frametitle{The fifth Gamma matrix}
+
+
+
+$\overline{\Psi} \gamma^5 \Psi \Longrightarrow (P\Psi)^{+} \gamma^0 \gamma^5  (P\Psi)  \Longrightarrow \Psi^{+} (\gamma^0 )^{+} \gamma^5 \gamma^0 \Psi \Longrightarrow - \Psi^{+}  (\gamma^0 )^{+}  \gamma^5  \Psi \Longrightarrow  - \overline{\Psi} \gamma^5 \Psi \Longrightarrow $ Pseudo-scalar 
+ 
+
+
+
+To describe the parity-violating in weak interaction, we could (and will!) mix vector and axial interactions.
+
+$(\overline{\Psi}  \gamma^\mu \Psi) \pm (\overline{\Psi}  \gamma^\mu \gamma^5 \Psi)$
+
+
+
+
 \end{frame}
