--- a/examples/Historical-events.tex
+++ b/examples/Historical-events.tex
@@ -2,11 +2,27 @@
 % --------------------------------------------------- Slide --
 %\subsection{Blocks}
 \label{blocks}
-\begin{frame}\frametitle{Blocks}
-  \begin{block}{Block Title}
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  \end{block}
-    \begin{alertblock}{Alert Block Title} 
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  \end{alertblock}
+\begin{frame}\frametitle{Historical events}
+ \begin{itemize} 
+\item
+\textbf{500 B.C.}: real numbers and Synthetic Geometry by Euclid
+\pause  \item
+\textbf{1545}:  The Italian mathematician Gerolamo Cardano has introduced the complex numbers .
+\pause 
+\item
+\textbf{1843}: Hamilton invents Quaternions and the rules for operation on them.
+\pause 
+\item
+\textbf{1862} :  The second edition of Grassmann's theory of extension ,led to the development of Clifford Algebras , vector analysis…
+\pause 
+\item
+\textbf{1878}: Clifford introduces “geometric algebra”, but dies at age 34. 
+\pause 
+\item
+\textbf{1881-1884} :Gibbs developed a three-dimensional vector analysis based on Grassmann's and Hamilton's ideas.
+\pause 
+\item
+\textbf{1920}: Renaissance in quantum mechanics (Pauli, Dirac)
+\end{itemize}
+
 \end{frame}
