--- a/examples/applications.tex
+++ b/examples/applications.tex
@@ -1,25 +1,30 @@
 %\section{Figures}
 % --------------------------------------------------- Slide --
 %\subsection{Figures}
-\label{figures}
-\begin{frame}\frametitle{Domination on a Chessboard}
-  \begin{figure}[htb]
-    \centering
-    \begin{tabular}{cc}\pause{\includegraphics[scale=1]{examples/DomChess8.pdf}}&
-      \pause{\includegraphics[scale=1]{examples/DomChess7.pdf}}\\
-      \pause{\includegraphics[scale=1]{examples/DomChess6.pdf}}&
-      \pause{\includegraphics[scale=1]{examples/Chess1.pdf}}
-    \end{tabular}
-  \end{figure}
-\end{frame}
+\label{applications}
+\begin{frame}\frametitle{applications}
 
-% --------------------------------------------------- Slide --
-%\subsection{Figures}
-\label{figures2}
-\begin{frame}\frametitle{Single figure with caption}
-  \begin{figure}[htb]
-    \centering
-    \includegraphics[scale=0.25]{examples/figures/400x400.png}
-    \caption{This is an caption!}
-  \end{figure}
+The formalism of Clifford algebras allows wide applications, in particular,
+
+\begin{itemize}
+ \item 
+ Mechanics:  Foucault pendulum
+ \item 
+
+Electro-magnetostatics
+ \item 
+
+Dispersion and diffraction E.M.
+ \item 
+
+Quantum Mechanics: spin precession 
+ \item 
+
+Field Theory: Dirac equation 
+ \item 
+
+General Relativity
+\end{itemize}
+
+
 \end{frame}
