--- a/presentation.tex
+++ b/presentation.tex
@@ -12,9 +12,6 @@
 %===============================================================================
 \documentclass[serif,11pt]{beamer}
 
-%=================================================
-% theme and color
-%=================================================
 \usetheme{Warsaw} %Themes http://www.hartwork.org/beamer-theme-matrix/
 \definecolor{colorA}{RGB}{96, 34, 59}
 \definecolor{colorB}{RGB}{140, 151, 154}
@@ -70,6 +67,8 @@
 \section{Introduction}
 \input{examples/Algebraic-structure}
 \input{examples/Historical-events}
+\input{examples/Quaternion}
+
 \section{Clifford algebra}
 \input{examples/definition}
 \subsection{Demonstration of Clifford’s rule}
