--- a/examples/Bilinear-covariants.tex
+++ b/examples/Bilinear-covariants.tex
@@ -2,32 +2,22 @@
 % --------------------------------------------------- Slide --
 %\subsection{Theorem Code}
 \label{theoremCode}
-\begin{frame}\frametitle{Theorem}
-  There is also a group of blocks that are especially useful for presenting mathematics. For example the ‘theorem’ environment, the ‘corollary’ environment and the ‘proof’ environment.
-  \begin{semiverbatim}
-    \\begin\{theorem\}[Pythagoras] \newline
-      $ a^2 + b^2 = c^2$ \newline
-    \\end\{theorem\} \newline
-    \\begin\{corollary\} \newline
-      $ x + y = y + x  $ \newline
-    \\end\{corollary\} \newline
-    \\begin\{proof\} \newline
-      $\omega +\phi = \epsilon $ \newline
-    \\end\{proof\}
-  \end{semiverbatim}
-\end{frame}
+\begin{frame}\frametitle{Bilinear covariants}
+all spinor fields live in the a 4-dimensional spacetime 
+spacetime time algebra
 
-% --------------------------------------------------- Slide --
-%\subsection{Theorem Blocks}
-\label{theoremBlocks}
-\begin{frame}\frametitle{Theorem Blocks}
-  \begin{theorem}[Pythagoras] 
-    $ a^2 + b^2 = c^2$
-  \end{theorem}
-  \begin{corollary}
-    $ x + y = y + x  $
-  \end{corollary}
-  \begin{proof}
-    $\omega +\phi = \epsilon $
-  \end{proof}
+\begin{center}
+\begin{tabular}{|c|c|c|c|}\hline
+\textbf{$\Gamma$} & \textbf{transform as} & \textbf{\# of $\gamma$'s} & \textbf{\# of composants}\\\hline
+1 & scalar & 0 & 1 \\\hline
+$\gamma^\mu$ & vector & 1 & 4\\\hline
+$\sigma \gamma^\nu$ & tensor & 2 & 6\\\hline
+$\gamma^5 \gamma^\mu$ & axial vector & 3 & 4\\\hline
+$\gamma^5$ & pseudoscalar & 4 & 1\\\hline
+\end{tabular}
+\end{center}
+This exhausts all possibilities. The total number of components is 16, meaning that the set $\{ 1-\gamma^\mu-\sigma \gamma^\nu-\gamma^5 \gamma^\mu-\gamma^5\}$
+\\ makes a complete basis for any four-by-four
+matrix.\\Such $\overline{\Psi} \Gamma\Psi$ currents are called \textbf{bilinear covariants}.
+
 \end{frame}
