--- a/presentation.tex
+++ b/presentation.tex
@@ -106,10 +106,11 @@ CONCLUSION
 %========================
 % thanks
 %========================
-\begin{frame}
+\begin{frame}\frametitle{Thanks}
 \centering
-thanks \\
-questions ?
+
+Thanks for your attention!\\
+Any questions?
 \end{frame}
 
 
