--- a/examples/Gamma-5.tex
+++ b/examples/Gamma-5.tex
@@ -5,9 +5,12 @@
 \begin{frame}\frametitle{The fifth Gamma matrix}
 
 Define an additional γ-matrix by:\\
+$\gamma ^{5}={\frac {i}{4!}}\varepsilon _{\mu \nu \alpha \beta }\gamma ^{\mu }\gamma ^{\nu }\gamma ^{\alpha }\gamma ^{\beta }$
+\\
 
-$\gamma^5\equiv i/4! \varepsilon_{\nu \rho \sigma  \eta}  \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\eta$\\
-$\gamma^5\equiv i\gamma^0\gamma^1\gamma^2\gamma^3$\\
+${\displaystyle \gamma ^{5}:=i\gamma ^{0}\gamma ^{1}\gamma ^{2}\gamma ^{3}={\begin{pmatrix}0&0&1&0\\0&0&0&1\\1&0&0&0\\0&1&0&0\end{pmatrix}}}$
+
+
 
 Note:
 $(\gamma^5)^2 = 1$
