--- a/examples/applications.tex
+++ b/examples/applications.tex
@@ -4,26 +4,17 @@
 \label{applications}
 \begin{frame}\frametitle{applications}
 
-The formalism of Clifford algebras allows wide applications, in particular,
+The formalism of Clifford algebras allows wide applications, in particular :
 
 \begin{itemize}
+ \item
+ Field Theory: Dirac equation;
  \item 
- Mechanics:  Foucault pendulum
- \item 
+General Relativity;
+\item 
+Electromagnetisme : Dispersion and diffraction. 
+  
 
-Electro-magnetostatics
- \item 
-
-Dispersion and diffraction E.M.
- \item 
-
-Quantum Mechanics: spin precession 
- \item 
-
-Field Theory: Dirac equation 
- \item 
-
-General Relativity
 \end{itemize}
 
 
