--- a/presentation.tex
+++ b/presentation.tex
@@ -75,7 +75,7 @@
 \input{examples/Demonstration}
 \subsection{Clifford algebra Cl(n) structure}
 \input{examples/Cl-structure}
-\subsection{Clifford algebra simple example: the space-time algebra}
+\subsection{Clifford algebra simple example: $\emph{Cl}(3,0)$ \& $\emph{Cl}(1,3)$ }
 \input{examples/space-time-algebra}
 \subsection{Some applications of Clifford algebra}
 \input{examples/applications}
