--- a/examples/Gamma-matrices-rule.tex
+++ b/examples/Gamma-matrices-rule.tex
@@ -1,7 +1,40 @@
-\begin{frame}\frametitle{Overview}
+\begin{frame}[allowframebreaks]
+ \frametitle{Gamma matrices' rule}
 \begin{itemize}
-\pause \item The trivial Set Cover algorithm has running time of ${\cal O}(2^n)$.
-\pause \item bla, bla, bla\ldots
+\item The klein Gordon equation of a free massive particle :
+  \begin{center}
+    $P^\mu P_\mu \Psi = m^2 \Psi$, \qquad  $(\mu=0,1,2,3)$
+  \end{center}
+  % Where the contravariant and covariant energy-momentum operators are given by
+  Where :
+  \begin{center}
+    $P^\mu = \imath \hbar g^{\mu\nu} \partial_\nu $  \qquad; \quad $P_\mu = \imath \hbar \partial_\mu$
+  \end{center}
+  And :
+  \begin{center}
+    $g^{\mu\nu}= diag(1,-1,-1,-1)$   
+  \end{center}
+  \item The linear matrix wave equation :
+  \begin{center}
+    $\gamma_\mu P^\mu \Psi= m\Psi$   \qquad (2)
+  \end{center}
+  with:
+  \begin{center}
+    $\gamma^\mu P^\mu = \imath (\gamma^0 \frac{\partial}{\partial t} +\gamma \nabla)$\\
+    %\gamma is a 3-dimension matrix vector with components gamma1,2,3 
+  \end{center}
+  the equation (2) satisfy the equation (1) if and only if :
+  \begin{center}
+    $ (\gamma_\mu P^\mu)^2=P^\mu P_\mu I$  \\
+  \end{center}
+  \begin{center}
+  \\  $\Longrightarrow P^\mu P^\nu \dfrac{1}{2}(\gamma_\mu \gamma_\nu +\gamma_\nu \gamma_\mu )=P^\mu P^\nu g_{\mu\nu} I$
+  \end{center}
+  Equivalently if and only if Clifford's rules are satisfied :
+  \begin{center}
+  \item  $(\gamma_\mu \gamma_\nu +\gamma_\nu \gamma_\mu )=2 g_{\mu\nu} I$
+  \end{center}
+  %Therefore, the Dirac 1-matrices which brought in the spin of the electron turn out to be representations of elements of a Clifford algebra associated with Minkowski space.
 \end{itemize}
 
 \end{frame}
