--- a/examples/space-time-algebra.tex
+++ b/examples/space-time-algebra.tex
@@ -3,11 +3,11 @@
 %\subsection{Example}
 \label{The space-time algebra}
 \begin{frame}[allowframebreaks]\frametitle{Space algebra \& Space-Time algebra}
-   In physics the clifford algebra $ \emph{Cl}(3,0)$ and $\emph{Cl}(1,3)$ have a great applications.
+   In physics the clifford algebra $ \emph{Cl}_{(3,0)}$ and $\emph{Cl}_{(1,3)}$ have a great applications.
  \begin{enumerate}
-	\item {\color{orange} For  $\emph{\textbf{Cl}(3,0)}$ }:\\
+	\item {\color{orange} For  $\emph{\textbf{Cl}_{(3,0)}}$ }:\\
         The three generators $(e_{1},e_{2},e_{3})$ corresponds to three spatial coordinates.\\
-        The matrix representation for $\emph{Cl}(3,0)$ is usually specified using Pauli matrices $\sigma_{1}$, $\sigma_{2}$ et $ \sigma_{3}$
+        The matrix representation for $\emph{Cl}_{(3,0)}$ is usually specified using Pauli matrices $\sigma_{1}$, $\sigma_{2}$ et $ \sigma_{3}$
         in the following way :
  \[
   $e\longrightarrow \sigma_{0}$=\left[\begin{array}{cc}
@@ -53,7 +53,7 @@ The pseudoscalar is defined by :
 \begin{center}
   $i$ = $\sigma_{1}\wedge\sigma_{2}\wedge\sigma_{3}= \sigma_{1}\sigma_{2}\sigma_{3} $ 
 \end{center}
-\item {\color{orange} For  $\emph{\textbf{Cl(1,3)}}$} :
+\item {\color{orange} For  $\emph{\textbf{Cl_{(1,3)}}}$} :
 
  The generator $e_1$ corresponds to time, $e_2$,$e_3$,$e_4$, corresponds to three spatial coordinates.\\
 The matrix representation for  $\emph{Cl}(1,3)$  can be obtained using Dirac's matrices, the timelike $\gamma_0$ and the space vectors $\gamma_k (k=1,2,3)$ such that :
