--- a/examples/Dirac-equation.tex
+++ b/examples/Dirac-equation.tex
@@ -6,14 +6,15 @@
 \label{pause}
 \begin{frame}\frametitle{Lists - Itemize with Pause}
   \begin{itemize}
-    \pause \item Point A
-    \pause \item Point B
+    %\pause \item Point A
+    %\pause \item Point B
     \begin{itemize}
-      \pause \item part 1
-      \pause \item part 2
+    I think that thisslide will be removed, has to be removed
+      %\pause \item part 1
+      %\pause \item part 2
     \end{itemize}
-    \pause \item Point C
-    \pause \item Point D
+    %\pause \item Point C
+   % \pause \item Point D
   \end{itemize}
 \end{frame}
 
