--- a/examples/space-time-algebra.tex
+++ b/examples/space-time-algebra.tex
@@ -53,7 +53,7 @@ The pseudoscalar is defined by :
 \begin{center}
   $i$ = $\sigma_{1}\wedge\sigma_{2}\wedge\sigma_{3}= \sigma_{1}\sigma_{2}\sigma_{3} $ 
 \end{center}
-\item {\color{orange} For  $\emph{\textbf{Cl_{(1,3)}}}$} :
+\item {\color{orange} For  $\emph{\textbf{Cl}_{(1,3)}}$ } :
 
  The generator $e_1$ corresponds to time, $e_2$,$e_3$,$e_4$, corresponds to three spatial coordinates.\\
 The matrix representation for  $\emph{Cl}(1,3)$  can be obtained using Dirac's matrices, the timelike $\gamma_0$ and the space vectors $\gamma_k (k=1,2,3)$ such that :
