--- a/examples/space-time-algebra.tex
+++ b/examples/space-time-algebra.tex
@@ -51,7 +51,13 @@ The bivector is defined by :
 
 The pseudoscalar is defined by :
 \begin{center}
-  $i$ = $\sigma_{1}\wedge\sigma_{2}\wedge\sigma_{3}= \sigma_{1}\sigma_{2}\sigma_{3} $ 
+  $i$ = $\sigma_{1}\wedge\sigma_{2}\wedge\sigma_{3}= \sigma_{1}\sigma_{2}\sigma_{3} $
+  %he pseudoscalarimust not be confused with the unit scalar imaginary — weare in a space of even dimension soianticommutes with odd-grade elements, andcommutes only with even-grade element
+  
+\end{center}
+The full algebra is then 8-dimensional:
+\begin{center}
+$ {1}\qquad { \sigma_j} \qquad {\sigma_{jk}} \qquad {i}$   \qquad $(j,k=1,2,3 ~; k \ne j)$
 \end{center}
 \item {\color{orange} For  $\emph{\textbf{Cl}_{(1,3)}}$ } :
 
@@ -80,10 +86,20 @@ $\gamma_{\mu\nu\sigma}$ = $\gamma_{\mu}\wedge\gamma_{\nu}\wedge\gamma_{\sigma}$
 \end{center}
 The pseudoscalar is defined by :
 \begin{center}
-$\gamma_5$ = $\gamma_{0}\wedge\gamma_{1}\wedge\gamma_{2}\wedge\gamma_{3}= \gamma_{0}\gamma_{1}\gamma_{2}\gamma_{3} $ 
+$i$ = $\gamma_{0}\wedge\gamma_{1}\wedge\gamma_{2}\wedge\gamma_{3}= \gamma_{0}\gamma_{1}\gamma_{2}\gamma_{3} $ 
+\end{center}
+a basis for the 16-dimensional STA is provided by :
+\begin{center}
+$ 1 \qquad \gamma_\mu \qquad \gamma_{\mu\nu} \qquad \gamma_{\mu\nu\sigma} \qquad i$
+%1 scalar  4 vectors  6 bivectors  4 trivectors  1 pseudoscalar
 \end{center}
 
 {\color{blue} The Dirac algebra embodies the local geometric properties of space-time, whereas the Pauli algebra represents the properties of space}. %These two algebras must be related in a definite way.
 
+\begin{center}
+              $ \sigma_k= \gamma_k \gamma_0$
+\end{center}
+
+   
 \end{enumerate}
 \end{frame}
