--- a/examples/Definition-and-Properties.tex
+++ b/examples/Definition-and-Properties.tex
@@ -2,7 +2,46 @@
 % --------------------------------------------------- Slide --
 %\subsection{Tables}
 \label{tables}
-\begin{frame}\frametitle{Tables}
- Diracology:
-
+\begin{frame}[allowframebreaks]\frametitle{ Gamma matrices' properties}
+\begin{itemize}
+\item  Gamma matrices {} must satisfy the basic commutation realtion:\\
+    \begin{center}
+     $[\gamma_\mu , \gamma_\nu]_+= 2g_{\mu\nu}$ \\
+     \end{center}
+     \begin{center}
+\\ $\gamma_0^{2}=1 \qquad ; \gamma_k^2=-1 \quad ; \gamma_\mu .\gamma_\nu = 0 \quad (\mu \ne \nu) $
+\end{center}
+\begin{center}
+\\$\gamma_0 \gamma_\mu^{\dagger}\gamma_0=\gamma_\mu \qquad$
+\end{center}
+\begin{center}
+$ \sigma_{\mu\nu}= i\dfrac{1}{2}[\gamma_\mu,\gamma_\nu]$
+\end{center}
+\end{itemize}
+\begin{center}
+\[
+  $\gamma_{0}$=\left(\begin{array}{cc}
+    \sigma_0 & 0 \\
+    0 & \sigma_0
+    \end{array}\right) ~;  \qquad
+$\gamma_{i}$=\left(\begin{array}{cc}
+    0 & \sigma_i   \\
+   -\sigma_i & 0
+    \end{array}\right)    
+    \]
+\end{center}
+\begin{center}
+\end{center}
+\begin{center}
+\end{center}
+\begin{center}
+\end{center}
+\begin{center}
+\end{center}
+\begin{center}
+\end{center}
+\begin{center}
+\end{center}
+\begin{center}
+\end{center}
 \end{frame}
