--- a/examples/space-time-algebra.tex
+++ b/examples/space-time-algebra.tex
@@ -64,7 +64,7 @@ $ {1}\qquad { \sigma_j} \qquad {\sigma_{jk}} \qquad {i}$   \qquad $(j,k=1,2,3 ~;
  The generator $e_1$ corresponds to time, $e_2$,$e_3$,$e_4$, corresponds to three spatial coordinates.\\
 The matrix representation for  $\emph{Cl}(1,3)$  can be obtained using Dirac's matrices, the timelike $\gamma_0$ and the space vectors $\gamma_k (k=1,2,3)$ such that :
 \begin{center}
-$\gamma_0^²=1 \qquad ; \gamma_k^2=-1 \quad ; \gamma_\mu .\gamma_\nu = 0 \quad (\mu \ne \nu) $
+$\gamma_0^{2}=1 \qquad ; \gamma_k^2=-1 \quad ; \gamma_\mu .\gamma_\nu = 0 \quad (\mu \ne \nu) $
 
 \end{center}
  The matrix representation is given  as follows:
