--- a/examples/Definition-and-Properties.tex
+++ b/examples/Definition-and-Properties.tex
@@ -39,24 +39,43 @@ $\gamma_{i}$=\left(\begin{array}{cc}
 \item The  commutation  relations of Gamma matrices determine all their general properties :
 \begin{enumerate}
 \item  $\color{blue}{\gamma^\mu\gamma_\mu = 4 I_4} $ :\\
-    $\gamma^\mu \gamma_\mu =&\gamma^\mu g_{\mu\nu} \gamma^\nu = g_{\mu\nu} \gamma^\mu \gamma^\nu = \dfrac{1}{2} \left(g_{\mu\nu} + g_{\nu\mu}\right) \gamma^\mu \gamma^\nu$\\$ \gamma^\mu\gamma_\mu = \dfrac{1}{2} \left(g_{\mu\nu}\gamma^\mu \gamma^\nu + g_{\nu\mu}\gamma^\mu \gamma^\nu\right)=\dfrac{1}{2} \left(g_{\mu\nu}\gamma^\mu \gamma^\nu + g_{\mu\nu}\gamma^\nu \gamma^\mu\right)$\\$\gamma^\mu\gamma_\mu = \dfrac{1}{2} g_{\mu\nu} \left[\gamma^\mu, \gamma^\nu \right]_+$\\ $  \gamma^\mu\gamma_\mu =\dfrac{1}{2} g_{\mu\nu} \left(2 g^{\mu\nu} I_4 \right) = g_{\mu\nu} g^{\mu\nu} I_4 = 4$
+    $\gamma^\mu \gamma_\mu =&\gamma^\mu g_{\mu\nu} \gamma^\nu = g_{\mu\nu} \gamma^\mu \gamma^\nu = \dfrac{1}{2} \left(g_{\mu\nu} + g_{\nu\mu}\right) \gamma^\mu \gamma^\nu$\\
+    $ \gamma^\mu\gamma_\mu = \dfrac{1}{2} \left(g_{\mu\nu}\gamma^\mu \gamma^\nu + g_{\nu\mu}\gamma^\mu \gamma^\nu\right)=\dfrac{1}{2} \left(g_{\mu\nu}\gamma^\mu \gamma^\nu + g_{\mu\nu}\gamma^\nu \gamma^\mu\right)$\\
+    $\gamma^\mu\gamma_\mu = \dfrac{1}{2} g_{\mu\nu} \left[\gamma^\mu, \gamma^\nu \right]_+$\\
+    $  \gamma^\mu\gamma_\mu =\dfrac{1}{2} g_{\mu\nu} \left(2 g^{\mu\nu} I_4 \right) = g_{\mu\nu} g^{\mu\nu} I_4 = 4$
  \begin{center}
 $\Longrightarrow  \color{blue}{\gamma^\mu\gamma_\mu = 4 I_4} $
 \end{center}
 As same we have :
-\
-\item  $\gamma ^{\mu }\gamma ^{\nu }\gamma ^{\rho }=\eta ^{\mu \nu }\gamma ^{\rho }+\eta ^{\nu \rho }\gamma ^{\mu }-\eta ^{\mu \rho }\gamma ^{\nu }-i\epsilon ^{\sigma \mu \nu \rho }\gamma _{\sigma }\gamma ^{5}$
+\item $ \gamma ^{\mu }\gamma ^{\nu }\gamma _{\mu }=-2\gamma ^{\nu }$
+\item $\gamma ^{\mu }\gamma ^{\nu }\gamma ^{\rho }\gamma _{\mu }=4 g^{\nu \rho }I_{4}$
+\item $\gamma ^{\mu }\gamma ^{\nu }\gamma ^{\rho }\gamma ^{\sigma }\gamma _{\mu }=-2\gamma ^{\sigma }\gamma ^{\rho }\gamma ^{\nu } $
+\item  $\gamma ^{\mu }\gamma ^{\nu }\gamma ^{\rho }=g ^{\mu \nu }\gamma ^{\rho }+g^{\nu \rho }\gamma ^{\mu }-g^{\mu \rho }\gamma ^{\nu }-i\epsilon ^{\sigma \mu \nu \rho }\gamma _{\sigma }\gamma ^{5}$
 \end{enumerate}
+\item The   factors  $\gamma_\mu$ usually appear in combination with various 4-vectors as ''scalar  products''  :
 \begin{center}
+$\not\! a = a^\mu \gamma_\mu$ 
 \end{center}
+Then, the commutation rule will become :
 \begin{center}
+$\not\! a \not\! b + \not\! b \not\!a =2(ab)$ \qquad $ \not\! a \not\! a = a^{2} $
 \end{center}
-\begin{center}
-\end{center}
-\begin{center}
-\end{center}
-\begin{center}
-\end{center}
+And last equations become :
+\begin{enumerate}
+\item   $ \gamma ^{\mu } \not\! a \gamma _{\mu }=-2 \not\! a $
+\item \item $\gamma ^{\mu }\not\! a \not\! b \gamma _{\mu }=4 (ab)I_{4}$
+\item $\gamma ^{\mu }\not\! a\not\! b\not\! c\gamma _{\mu }=-2\not\! a\not\! b\not\! c $
 \end{enumerate}
+\item The following trace identities are satisfied by the Gamma matrices :
+\begin{enumerate}
+\item $\operatorname {tr} \left(\gamma ^{\mu }\right)=0$
+\item $ \operatorname {tr} \left(\gamma ^{\mu }\gamma ^{\nu }\right)=4 g ^{\mu \nu }$
+\item $\operatorname {tr} \left(\gamma ^{\mu }\gamma ^{\nu }\gamma ^{\rho }\gamma ^{\sigma }\right)=4\left(g^{\mu \nu }g^{\rho \sigma }-g^{\mu \rho }g^{\nu \sigma }+g^{\mu \sigma }g^{\nu \rho }\right) $
+\item $\operatorname {tr} \left(\gamma ^{\mu }\gamma ^{\nu }\gamma ^{\rho }\gamma ^{\sigma }\gamma ^{5}\right)=-4i\epsilon ^{\mu \nu \rho \sigma }$
+
+\end{center}
+\begin{center}
+
+\end{center}
 \end{itemize}
 \end{frame}
