--- a/examples/Gamma-5.tex
+++ b/examples/Gamma-5.tex
@@ -17,6 +17,8 @@ $(\gamma^5)^2 = 1$
 anti-commutes with every other $\gamma$:
 $\{\gamma^5,\gamma^\mu\}=0 \Longrightarrow \gamma^5\times \gamma^\mu = - \gamma^\mu \times \gamma^5 $
 
+$\operatorname {tr} \left(\gamma ^{5}\right)=\operatorname {tr} \left(\gamma ^{\mu }\gamma ^{\nu }\gamma ^{5}\right)=0$
+
 
 \end{frame}
 
