--- a/presentation.tex
+++ b/presentation.tex
@@ -34,7 +34,7 @@
 %=================================================
 
 \title[ \hspace{0.8cm} \insertframenumber/\inserttotalframenumber]{{\sc Gamma Matrices and Clifford algebra }}
-\author{{Asma BOUTAGAYOUT \\ Ismail Ezzaki}}
+\author{{Asma BOUTAGAYOUT \\ Ismail EZZAKI}}
 \date  {\today}
 \institute{Université Cadi Ayyad \\Faculté des Sciences Semlalia \\ Département de Physique}
 
@@ -80,8 +80,8 @@
 \subsection{Some applications of Clifford algebra}
 \input{examples/applications}
 \section{ Gamma Matrices}
-\subsection{Dirac equation}
-\input{examples/Dirac-equation}
+%\subsection{Dirac equation}
+%\input{examples/Dirac-equation}
 \subsection{Gamma matrices’ rule}
 \input{examples/Gamma-matrices-rule}
 \subsection{Definition and Properties}
@@ -92,8 +92,8 @@
 \input{examples/Bilinear-covariants}
 \subsection{Gammma representation}
 \input{examples/Representation}
-\section{Conclution}
-\begin{frame}{Conclution}
+\section{Conclusion}
+\begin{frame}{Conclusion}
 CONCLUSION
 \end{frame}
 
