--- a/examples/Algebraic-structure.tex
+++ b/examples/Algebraic-structure.tex
@@ -2,33 +2,27 @@
 \begin{frame}\frametitle{Algebraic structure}
 
 An algebraic structure consists of
+\begin{itemize}
+\item 
 a set of elements B 
-binary operators ${+, \times}$
-and a unary operator ${1‘ }$
+\item 
+binary operators $(+,\times ...)$
+\item 
+and a unary operator $(ex: !)$\end{itemize}
+
 Such that following holds :
-$\forall a,b \in B $\\
-\textit{Closure}:\begin{center}
 
-$a+b \in  B$	and	$a\times b \in B$ \end{center}
-
-
-\textit{Commutativity}: \begin{center}
-
-$a+b = b+a$	and	$a\times b = b\times a$
-\end{center}
-
-\textit{Associativity}: 
-\begin{center}
- 
-
-$a+(b+c)=(a+b)+c$ and	$a\times (b\times c) = (a\times b)\times c$ 
-\end{center}
-
-
-\textit{Identity}: 
-\begin{center}
-
-$a+0 =  a$		and	$a\times 1=a$ 
-\end{center}
+%$\forall a,b \in B $
+\begin{itemize}
+\item 
+Membership: B contains at least two elements a and b
+ \item 
+Closure:		$a+b \in  B$	and	$a\times b \in B$ \item 
+Commutativity:	$a+b = b+a$	and	$a\times b = b\times a$ \item 
+Associativity:	$a+(b+c)=(a+b)+c$   \item 
+Identity		$a+0 =  a$		and	$a\times 1=a$ \item 
+Distributivity:	 $a.(b+c)=(a.b)+(a.c)$\item 
+Complementarity: $a+a’=1$ and $a.a’=0$\\
+\end{itemize}
 
 \end{frame}
