--- a/examples/Demonstration.tex
+++ b/examples/Demonstration.tex
@@ -4,6 +4,10 @@
 \label{columns}
 \begin{frame}\frametitle{Demonstration of Clifford’s rule }
 
+page 6
+
+
+
 % 
 %  \textbf{Gressman} : “a product of two extensives quantities u and v is defined as extensive quantity or a scalar.”
 %  
