--- a/examples/Gamma-5.tex
+++ b/examples/Gamma-5.tex
@@ -5,17 +5,26 @@
 \begin{frame}\frametitle{The fifth Gamma matrix}
 
 Define an additional γ-matrix by:\\
-$\gamma ^{5}={\frac {i}{4!}}\varepsilon _{\mu \nu \alpha \beta }\gamma ^{\mu }\gamma ^{\nu }\gamma ^{\alpha }\gamma ^{\beta }$
+
+\begin{center}
+ $\gamma ^{5}={\frac {i}{4!}} . \varepsilon _{\mu \nu \alpha \beta }.\gamma ^{\mu }\gamma ^{\nu }\gamma ^{\alpha }\gamma ^{\beta }$
 \\
+\\
+\\ 
+${\displaystyle \gamma ^{5}=i\gamma ^{0}\gamma ^{1}\gamma ^{2}\gamma ^{3}={\begin{pmatrix}0&0&1&0\\0&0&0&1\\1&0&0&0\\0&1&0&0\end{pmatrix}}}$
 
-${\displaystyle \gamma ^{5}:=i\gamma ^{0}\gamma ^{1}\gamma ^{2}\gamma ^{3}={\begin{pmatrix}0&0&1&0\\0&0&0&1\\1&0&0&0\\0&1&0&0\end{pmatrix}}}$
+ 
+\end{center}
 
 
-
-Note:
-$(\gamma^5)^2 = 1$
-anti-commutes with every other $\gamma$:
+\begin{itemize}
+ \item  $(\gamma^5)^2 = 1$
+\item anti-commutes with every other $\gamma$:
 $\{\gamma^5,\gamma^\mu\}=0 \Longrightarrow \gamma^5\times \gamma^\mu = - \gamma^\mu \times \gamma^5 $
+ 
+\end{itemize}
+
+
 
 
 \end{frame}
@@ -28,14 +37,15 @@ $\{\gamma^5,\gamma^\mu\}=0 \Longrightarrow \gamma^5\times \gamma^\mu = - \gamma^
 
 
 
-$\overline{\Psi} \gamma^5 \Psi \Longrightarrow (P\Psi)^{+} \gamma^0 \gamma^5  (P\Psi)  \Longrightarrow \Psi^{+} (\gamma^0 )^{+} \gamma^5 \gamma^0 \Psi \Longrightarrow - \Psi^{+}  (\gamma^0 )^{+}  \gamma^5  \Psi \Longrightarrow  - \overline{\Psi} \gamma^5 \Psi \Longrightarrow $ Pseudo-scalar 
- 
+$\overline{\Psi} \gamma^5 \Psi  \, \, \Longrightarrow (P\Psi)^{+} \gamma^0 \gamma^5  (P\Psi) \\  \, \, \, \, \,  \Longrightarrow \Psi^{+} (\gamma^0 )^{+} \gamma^5 \gamma^0 \Psi \\  \, \, \, \, \,  \Longrightarrow - \Psi^{+}  (\gamma^0 )^{+}  \gamma^5  \Psi \\  \, \, \, \, \, \Longrightarrow  - \overline{\Psi} \gamma^5 \Psi \\  \, \, \, \, \, \Longrightarrow $ Pseudo-scalar 
+  
 
+\\\\
 
+{\color{red} To describe the parity-violating in weak interaction, we could (and will!) mix vector and axial interactions.}
 
-To describe the parity-violating in weak interaction, we could (and will!) mix vector and axial interactions.
-
-$(\overline{\Psi}  \gamma^\mu \Psi) \pm (\overline{\Psi}  \gamma^\mu \gamma^5 \Psi)$
+\begin{center}
+$(\overline{\Psi}  \gamma^\mu \Psi) \pm (\overline{\Psi}  \gamma^\mu \gamma^5 \Psi)$\end{center}
 
 
 
