--- a/examples/Representation.tex
+++ b/examples/Representation.tex
@@ -2,33 +2,48 @@
 % --------------------------------------------------- Slide --
 %\subsection{Definition}
 \label{definition}
-\begin{frame}\frametitle{Dirac representation}
+\begin{frame}\frametitle{Dirac basis}
+
+in the Dirac basis:\\
+
 $\gamma ^{0}={\begin{pmatrix}I_{2}&0\\0&-I_{2}\end{pmatrix}},\quad \gamma ^{k}={\begin{pmatrix}0&\sigma ^{k}\\-\sigma ^{k}&0\end{pmatrix}},\quad \gamma ^{5}={\begin{pmatrix}0&I_{2}\\I_{2}&0\end{pmatrix}}$
-Dirac representation
  
-The gamma matrices we have written so far are appropriate for acting on Dirac spinors written in the Dirac basis; in fact, the Dirac basis is defined by these matrices. To summarize, in the Dirac basis:
+\begin{itemize}
+ \item In bass energy
+  \item  Appropriate for acting on Dirac spinors
+\end{itemize}
 
-
- 
 \end{frame}
-\begin{frame}\frametitle{Majorana representation}
-${\displaystyle {\begin{aligned}\gamma ^{0}&={\begin{pmatrix}0&\sigma ^{2}\\\sigma ^{2}&0\end{pmatrix}},&\gamma ^{1}&={\begin{pmatrix}i\sigma ^{3}&0\\0&i\sigma ^{3}\end{pmatrix}},&\gamma ^{2}&={\begin{pmatrix}0&-\sigma ^{2}\\\sigma ^{2}&0\end{pmatrix}},\\\gamma ^{3}&={\begin{pmatrix}-i\sigma ^{1}&0\\0&-i\sigma ^{1}\end{pmatrix}},&\gamma ^{5}&={\begin{pmatrix}\sigma ^{2}&0\\0&-\sigma ^{2}\end{pmatrix}},&C&={\begin{pmatrix}0&-i\sigma ^{2}\\-i\sigma ^{2}&0\end{pmatrix}},\end{aligned}}}$
+\begin{frame}\frametitle{Majorana basis}
+in the Majorana basis:\\
+
+
+${\displaystyle {\begin{aligned}\gamma ^{0}&={\begin{pmatrix}0&\sigma ^{2}\\\sigma ^{2}&0\end{pmatrix}},&\gamma ^{1}&={\begin{pmatrix}i\sigma ^{3}&0\\0&i\sigma ^{3}\end{pmatrix}},&\gamma ^{2}&={\begin{pmatrix}0&-\sigma ^{2}\\\sigma ^{2}&0\end{pmatrix}},\\\gamma ^{3}&={\begin{pmatrix}-i\sigma ^{1}&0\\0&-i\sigma ^{1}\end{pmatrix}},&\gamma ^{5}&={\begin{pmatrix}\sigma ^{2}&0\\0&-\sigma ^{2}\end{pmatrix}},\end{aligned}}}$
 \\
 
- (The reason for making all gamma matrices imaginary is solely to obtain the particle physics metric $(+, −, −, −)$, in which squared masses are positive. The Majorana representation, however, is real. One can factor out the $i$ to obtain a different representation with four component real spinors and real gamma matrices. The consequence of removing the $i$ is that the only possible metric with real gamma matrices is $(−, +, +, +)$.)
+\begin{itemize}
+ \item  ??? Positive energie for particule anti-particule
+ \item  Appropriate for Majorana fermion  
+\item  A Majorana fermion is defined as a fermion that equals to its charge conjugation
+\end{itemize}
 
 \end{frame}
-\begin{frame}\frametitle{ Weyl (chiral) representation }
-Another common choice is the Weyl or chiral basis,[5] in which ${\displaystyle \gamma ^{k}}\gamma ^{k}$ remains the same but ${\displaystyle \gamma ^{0}}\gamma ^{0}$ is different, and so ${\displaystyle \gamma ^{5}}\gamma ^{5}$ is also different, and diagonal,
+\begin{frame}\frametitle{ Weyl (chiral) basis }
+% 
+% Another common choice is the Weyl or chiral basis,[5] in which ${\displaystyle \gamma ^{k}}\gamma ^{k}$ remains the same but ${\displaystyle \gamma ^{0}}\gamma ^{0}$ is different, and so ${\displaystyle \gamma ^{5}}\gamma ^{5}$ is also different, and diagonal,
 
 
 $\gamma ^{0}={\begin{pmatrix}0&I_{2}\\I_{2}&0\end{pmatrix}},\quad \gamma ^{k}={\begin{pmatrix}0&\sigma ^{k}\\-\sigma ^{k}&0\end{pmatrix}},\quad \gamma ^{5}={\begin{pmatrix}-I_{2}&0\\0&I_{2}\end{pmatrix}},$
 
+\\
 
 ${\displaystyle \psi _{L}={\frac {1}{2}}\left(1-\gamma ^{5}\right)\psi ={\begin{pmatrix}I_{2}&0\\0&0\end{pmatrix}}\psi ,\quad \psi _{R}={\frac {1}{2}}\left(1+\gamma ^{5}\right)\psi ={\begin{pmatrix}0&0\\0&I_{2}\end{pmatrix}}\psi .}$
 
-The Weyl basis has the advantage that its chiral projections take a simple form,
 
+\begin{itemize}
+ \item  The Weyl basis has the advantage that its chiral projections take a simple form,
+ \item In high energy
+\end{itemize}
 
 
 
