--- a/examples/definition.tex
+++ b/examples/definition.tex
@@ -15,8 +15,37 @@ $v_{1} v_{2} + v_{2}v_{1} = 2Q(v_{1} , v_{2} ) . 1$
 where 1 is the unit, considered to be the multiplicative unit in the ground field F .
   \end{definition}
   
-  /*image*/
+ \end{frame} 
+  
+  
+  
+  
+\begin{frame}\frametitle{Definition} 
+  Unlike the standard vector analysis whose primitives are scalars and vectors for representing points and lines, Clifford Algebra has additional spatial primitives for representing plane and volume segments in two and three dimensions, and it can be extended to any number of higher dimensions by the same basic scheme, and they do, with remarkably useful properties.
+  
+ 
   
   
   
 \end{frame}
+  
+  
+  
+  
+  
+  
+  
+  
+ \begin{frame}\frametitle{Definition} 
+
+Combine inner and outer product to defined the geometric product \\
+	$AB = A.B + A^B$
+
+
+Result is not a vector, but the sum of a scalar + bivector!\\
+Operates on “multivectors”\\
+Subset of the tensoralgebra 
+ 
+\end{frame}
+
+
