--- a/examples/Demonstration.tex
+++ b/examples/Demonstration.tex
@@ -4,20 +4,95 @@
 \label{columns}
 \begin{frame}\frametitle{Demonstration of Clifford’s rule }
 
-page 6
+Clifford apply a general definition of product given by Gressman : “a product of two extensives quantities u and v is defined as extensive quantity or a scalar.”
+
+1\\
+
+clifford consider a n-fundamental units $(e_1,e_2,...,e_n)$ \\
+
+all $(e_j)^2=+1$or $-1$  and $e_j.e_k=-e_k.e_j (j \neq k)$ where e denotes the identity. 
+all product of linear factors must contain either basic terms of odd order $(ej, e_j e_k e_l, ... $such that $j \neq k \neq l)$,
+or basic terms of even order $( 1, e_j e_k, ...$ such that $j \neq k)$. \\
+
+There can be no such term of higher order than the n. 
+
+the total number of basic terms is $2^n$ units.
 
 
 
-% 
-%  \textbf{Gressman} : “a product of two extensives quantities u and v is defined as extensive quantity or a scalar.”
-%  
-% clifford consider a n-fundamental units (e1,e2,...,en) 
-% 
-% such that n is an integer ,  all$ (ej)^2= +e or -e $ and $ej.ek=-ek.ej$ $(j#k)=$\\
-% where e denotes the identity. all product of linear factors must contain either basic terms of odd order (ej, ejekel, ... such that j#k#l), or basic terms of even order ( 1, ej ek, ...such that j# k). There can be no such term of higher order than the n. and since we have altogether one term of order zero, n of order 1, (½ (n - 1); n odd,n/2; even) of order 2,... , one of order n; the total number of basic terms is 2^n units.
-% 
-% He uses the selective symbols Vo, VI, ..., Vn to denote the subspaces     containing expressions of order 0, 1, ..., n.
-% 
-%  
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Demonstration of Clifford’s rule }
+2\\
+
+he writes $w$ for the product of all $n-$units, $w \equiv e_1 e_2...e_n$ and enquires into the value of its square:
+$w^2 \equiv e_1 e_2....e_n e_1 e_2...e_n$,\\
+which after $r-$interchanges becomes:   
+
+$w^2 \equiv  (-1)^r (e_{1})^2 (e_{2})^2 ...(e_{n})^2  \equiv (-1)^r if ()e_j)^2=1 (-1)^{r+n} if ()e_j)^2=-1$
+
+\end{frame}
+
+
+
+\begin{frame}\frametitle{Demonstration of Clifford’s rule }
+3\\
+
+ Next, he considers the nature of the multiplication w ej' He observes that:\\
+ 
+relation 8 ansd 9 
+ 
+for both cases $(e_j)^2 = \pm 1$, $w e_j = \pm e_j w$ according as n is odd or even .\\
+ 
+ 
+ $w e_j $ is commutative or anti-commutative 
+ 
+
+Therefore, we can put :\\
+
+$w \equiv \sqrt{-1}$ 
+\end{frame}
+
+
+\begin{frame}\frametitle{Demonstration of Clifford’s rule }
+4\\
+
+
+
+he considers the factors of units of even order
+
+\begin{center}
+	$1, e_j e_k, e_j e_k e_i e_m...$such that $j \neq k \neq I$;
+\end{center}
+they form an algebra by themselves which he calls the even subalgebra \\
+
+the even subalgebra with basic elements 
+\begin{center}
+	$\{I; e_2 e_3; e_l e_3; e_l e_2\}$
+\end{center}
+ gives the quaternions with $i == e_2 e_3$, $j == e_l e_3$, $k == e_1 e_2;$
+
+
+
+
+
+\end{frame}
+\begin{frame}\frametitle{Demonstration of Clifford’s rule }
+
+The general element of the even subalgebra can be expressed as :\\
+
+
+where $q$ and $q'$ are quaternions. \\
+
+quadratic form :\\
+
+
+
+
+we get Clifford's rule \\
+$e_j e_k + e_k e_j = 2 Dirac_{jk} 1 , (j,k=I, ... ,n).$
+
 
 \end{frame}
