--- a/examples/Gamma-5.tex
+++ b/examples/Gamma-5.tex
@@ -11,7 +11,7 @@ Define an additional γ-matrix by:\\
 \\
 \\
 \\ 
-${\displaystyle \gamma ^{5}=i\gamma ^{0}\gamma ^{1}\gamma ^{2}\gamma ^{3}={\begin{pmatrix}0&0&1&0\\0&0&0&1\\1&0&0&0\\0&1&0&0\end{pmatrix}}}$
+$ \gamma ^{5}=i \gamma^{0} \gamma^{1} \gamma^{2} \gamma^{3} ={\begin{pmatrix}0&0&1&0\\0&0&0&1\\1&0&0&0\\0&1&0&0\end{pmatrix}}$
 
  
 \end{center}
