--- a/presentation.tex
+++ b/presentation.tex
@@ -15,11 +15,11 @@
 \usetheme{Warsaw} %Themes http://www.hartwork.org/beamer-theme-matrix/
 \definecolor{colorA}{RGB}{96, 34, 59}
 \definecolor{colorB}{RGB}{140, 151, 154}
-%\definecolor{secinhead}{RGB}{249,196,95}
-%\definecolor{titlebg}{RGB}{51,51,51}
-\setbeamercolor{structure}{fg=colorA,bg=colorB}
-%\setbeamercolor{secsubsec}{fg=secinhead,bg=black}
-%\setbeamercolor{frametitle}{fg=secinhead,bg=titlebg}
+\definecolor{secinhead}{RGB}{249,196,95}
+\definecolor{titlebg}{RGB}{51,51,51}
+%\setbeamercolor{structure}{fg=colorA,bg=colorB}
+\setbeamercolor{secsubsec}{fg=secinhead,bg=black}
+\setbeamercolor{frametitle}{fg=secinhead,bg=titlebg}
 
 %=================================================
 % packages and new commands
@@ -34,10 +34,10 @@
 % thesis details (preamble)
 %=================================================
 
-\title[ \hspace{0.8cm} \insertframenumber/\inserttotalframenumber]{{\sc Gamma Matrices and Clifford algebra }}
-\author{{Asma BOUTAGAYOUT \\ Ismail Ezzaki}}
+\title[ \hspace{0.8cm} \insertframenumber/\inserttotalframenumber]{{\sc Clifford Algebra And Gamma Matrices }}
+\author{{Asma BOUTAGAYOUT \\ Ismail EZZAKI}}
 \date  {\today}
-\institute{Université Cadi Ayyad \\Faculté des Sciences Semlalia \\ Département de Physique}
+\institute{University Cadi Ayyad \\Faculty of Sciences Semlalia \\ Physics Departement}
 
 
 
@@ -46,9 +46,6 @@
 %=================================================
 \begin{document}
 
-%========================
-% title page
-%========================
 \begin{frame}
   \begin{center}
     \vspace{0.1cm}
@@ -74,9 +71,9 @@
 \input{examples/definition}
 \subsection{Demonstration of Clifford’s rule}
 \input{examples/Demonstration}
-\subsection{Clifford algebra Cl(n) structure}
+\subsection{Clifford algebra $Cl(n)$ structure}
 \input{examples/Cl-structure}
-\subsection{Clifford algebra simple example: $\emph{Cl}(3,0)$ \& $\emph{Cl}(1,3)$ }
+\subsection{Clifford algebra simple example: $Cl(3,0)$ \& $Cl(1,3)$ }
 \input{examples/space-time-algebra}
 \subsection{Some applications of Clifford algebra}
 \input{examples/applications}
@@ -87,14 +84,14 @@
 \input{examples/Gamma-matrices-rule}
 \subsection{Definition and Properties}
 \input{examples/Definition-and-Properties}
-\subsection{The fifth Gamma matrix γ5}
+\subsection{The fifth Gamma matrix $\gamma^5$}
 \input{examples/Gamma-5}
 \subsection{Bilinear covariants}
 \input{examples/Bilinear-covariants}
 \subsection{Gammma representation}
 \input{examples/Representation}
-\section{Conclution}
-\begin{frame}{Conclution}
+\section{Conclusion}
+\begin{frame}{Conclusion}
 CONCLUSION
 \end{frame}
 
